--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -17,6 +17,7 @@ footer {
     color: #A9A9A9 ;
     bottom: 2.4rem;
     padding-top: 4rem;
+    position: absolute;
     left: 0;
     right: 0;
     width: 100%;
